# ComOpt

./: .gitignore  CMakeLists.txt  README.md  bms  build.bat  build.sh  vcpkg.json
.github/workflows/: comopt.yml
cmake/: 3rdParty.cmake  comoptBuild.cmake  comoptCompilerFlags.cmake  comoptConfig.cmake  comoptConfig.cmake.in  comoptDependencies.cmake  comoptInstall.cmake  comoptLibraries.cmake  comoptTest.cmake  comoptUse.cmake.in  comoptUtility.cmake  gitClone.bat.in
src/: CMakeLists.txt  Error.h
src/Approximations/: CMakeLists.txt
src/DesignVariables/: CMakeLists.txt
src/Model/: CMakeLists.txt
src/Optimizer/: CMakeLists.txt
src/Section/: CMakeLists.txt
src/Utils/: CMakeLists.txt  tensorialTools.cc  tensorialTools.h
src/approximations/: CMakeLists.txt
src/basics/: CMakeLists.txt  tensorialTools.cc  tensorialTools.h
src/coreOptimization/: CMakeLists.txt
src/designVariables/: CMakeLists.txt  DesignVariables.cpp  DesignVariables.h
src/interface/: CMakeLists.txt  application.h  base_interface.h
src/io/: AbaqusIo.cpp  AbaqusIo.h  CMakeLists.txt  ComOpt.cpp  ComOptIo.h  Io.h
src/model/: CMakeLists.txt  Model.cpp  Model.h
src/optimizer/: CMakeLists.txt  Optimizer.h
src/section/: CMakeLists.txt  Section.cpp  Section.h  StiffnessConverter.cpp  StiffnessConverter.h
src/utils/: CMakeLists.txt  Error.h  LinearAlgebra.cpp  LinearAlgebra.h
tests/: CMakeLists.txt
tests/Utils/functional/: main.cc
tests/Utils/inverse/: CMakeLists.txt  main.cc
tests/interface/: CMakeLists.txt  main.cc
tests/tensorial_tools/functional/: CMakeLists.txt  Ref_Results_Test_TTools.txt  main.cc
tests/tensorial_tools/inverse/: main.cc
tests/utils/boost/: CMakeLists.txt  main.cc
tests/utils/linearAlgebra/: CMakeLists.txt  main.cc
tools/: CMakeLists.txt
tools/compare/: CMakeLists.txt
tools/scripts/: CMakeLists.txt  comopt_test.bat  comopt_test.sh
